Fix image table overwrapping

--- a/SonyIMX500/wwwroot/css/site.css
+++ b/SonyIMX500/wwwroot/css/site.css
@@ -551,7 +551,9 @@ label {
     font-size: 0.85em;
     padding: 0.3em !important;
     line-height: 1;
+    overflow: hidden;
 }
+
 
 .ui-jqgrid-view {
     max-height: 400px;
